# sqltutor

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  sqltutor-install.sh  sqltutor-installer.sh
cgi.cpp/: Makefile.am  Makefile.in  cgi.cpp  cgi.h  check_answer.cpp  display_answers.h  form_init.cpp  form_main.cpp  form_stop.cpp  get_new_question.cpp  getting_started.cpp  main.cpp  permutation.cpp  permutation.h  save_answer.cpp  settings.cpp  show_datasets.cpp  show_sql_result.cpp  show_table_data.cpp  sqltutor.cpp  sqltutor.h  submit_sql.cpp
database/: Makefile  Makefile.am  Makefile.in  check_password.sql  create-database.sh  grant_privileges.sql  init_dataset.sql  init_tutorial.sql  merge_category.sql  next_question.sql  open_session.sql  sqltutor.sql
datasets/: Makefile  Makefile.am  Makefile.in
datasets/cs.filmy/: Makefile  Makefile.am  Makefile.in  filmy.sql
datasets/cs.letadla/: Makefile  Makefile.am  Makefile.in  ciselnik_letadel.sql  dopravni_letadla.sql  letecke_spolecnosti.sql
datasets/cs.nobel/: Makefile.am  Makefile.in  nobel.sql  nobelova_cena.sql
datasets/cs.pracoviste/: Makefile  Makefile.am  Makefile.in  pracoviste.sql
datasets/cs.premyslovci/: Makefile  Makefile.am  Makefile.in  premyslovci.sql
datasets/cs.staty/: Makefile  Makefile.am  Makefile.in  staty.sql
datasets/cs.tramvaje/: Makefile  Makefile.am  Makefile.in  tramvaje.sql
datasets/cs.unesco/: Makefile  Makefile.am  Makefile.in  unesco.sql  unesco_wh.sql
datasets/cs.vodocty/: Makefile  Makefile.am  Makefile.in  vodocty.sql
datasets/en.bbc/: Makefile  Makefile.am  Makefile.in  bbc.sql
datasets/en.buses/: Makefile.am  Makefile.in  buses.sql
datasets/en.busses/: Makefile  Makefile.am  Makefile.in  busses.sql
datasets/en.countries/: Makefile  Makefile.am  Makefile.in  countries.sql  country_codes.sql  national_capitals.sql  table_tennis.sql  un_regions.sql
datasets/en.movies/: Makefile  Makefile.am  Makefile.in  movies.sql
datasets/en.neeps/: Makefile  Makefile.am  Makefile.in  neeps.sql
datasets/en.nobel/: Makefile  Makefile.am  Makefile.in  nobel.sql
datasets/en.timetable/: Makefile
doc/: .symlinks  Doxyfile.in  Makefile.am  Makefile.in  concepts.texi  install.texi  internals.texi  intro.texi  schema.eps  schema.txt  sqltutor-dialog-1.eps  sqltutor-dialog-2.eps  sqltutor-dialog-3.eps  sqltutor-install.eps  sqltutor.texi  sqltutor.texinfo
doc/fig/: schema.eps  schema.txt  sqltutor-dialog-1.eps
doc/schema/: demo.tex  premp.cpp  premp.schema  text.sh
sqlquiz/cs/gi_ctu/: INSTALL  Makefile
sqlquiz/cs/gi_ctu/data/: Makefile  ciselnik_letadel.sql  dopravni_letadla.sql  filmy.sql  letecke_spolecnosti.sql  odsl.sql  premyslovci.sql  staty.sql  tramvaje.sql  unesco.sql  unesco_wh.sql  vodocty.sql
sqlquiz/cs/gi_ctu/quiz/: filmy.quiz  letadla.quiz  odsl.quiz  quiz  quiz.cpp  tramvaje.quiz  unesco.quiz  vodocty.quiz
sqlquiz/cs/gi_ctu/scripts/: dump-questions.sh
sqlquiz/cs/gi_ctu/sql/: dataset_sources.sql  datasets.sql
sqlquiz/cs/gi_ctu/void/: Makefile  README  join-demo.sql  rybniky.quiz  rybniky.sql  skladatele.sql  telefony.sql
sqltutor/: ChangeLog  Makefile.am  Makefile.in  cgi.cpp  cgi.h  check_answer.cpp  config.h.in  configure  configure.ac  display_answers.h  form_init.cpp  form_main.cpp  form_stop.cpp  get_new_question.cpp  main.cpp  permutation.cpp  permutation.h  save_answer.cpp  settings.cpp  show_datasets.cpp  show_sql_result.cpp  show_table_data.cpp  sqltutor.cpp  sqltutor.h  submit_sql.cpp
sqltutor/quiz/: Makefile.am  Makefile.in  quiz.cpp
sqltutor/sql/: Makefile.am  Makefile.in  create-tables.sh  dataset_sources.sql  datasets.sql  log.sql  next_question.sql  open_session.sql  questions.sql
tutorials/: Makefile  Makefile.am  Makefile.in  delete.sed
tutorials/.quiz/: Makefile  Makefile.am  Makefile.in  quiz.cpp
tutorials/cs.sqltutor/: Makefile  Makefile.am  Makefile.in  filmy.quiz  letadla.quiz  nobel.quiz  pracoviste.quiz  premyslovci.quiz  staty.quiz  tramvaje.quiz  unesco.quiz  vodocty.quiz
tutorials/en.sqlzoo/: Makefile  Makefile.am  Makefile.in  bbc.quiz  buses.quiz  movies.quiz  nobel.quiz  table_tennis.quiz
