bin_PROGRAMS     = sqltutor
sqltutor_SOURCES = sqltutor.cpp sqltutor.h main.cpp	\
	           cgi.h cgi.cpp			\
                   permutation.cpp permutation.h	\
                   check_answer.cpp			\
                   form_init.cpp			\
                   form_main.cpp			\
                   form_stop.cpp			\
                   get_new_question.cpp			\
		   save_answer.cpp			\
                   settings.cpp				\
                   show_sql_result.cpp			\
                   show_table_data.cpp			\
		   show_datasets.cpp			\
		   getting_started.cpp			\
                   submit_sql.cpp
