noinst_PROGRAMS  = sqltutor
sqltutor_SOURCES = sqltutor.cpp sqltutor.h main.cpp	\
	           cgi.h cgi.cpp			\
                   check_answer.cpp			\
                   display_answers.h			\
                   form_init.cpp			\
                   form_main.cpp			\
                   form_stop.cpp			\
                   get_new_question.cpp			\
                   permutation.cpp permutation.h	\
		   save_answer.cpp			\
                   settings.cpp				\
                   show_sql_result.cpp			\
                   show_table_data.cpp			\
		   show_datasets.cpp			\
                   submit_sql.cpp
